crates/azalea-core/src/parse/snapshots/azalea_core__parse__tests__bad_string_literal.snap
---
source: crates/azalea-core/src/parse/tests.rs
expression: output
---
SOURCE:
"Hello, world!

ERROR:
Error: Expected an expression
  1 > | "Hello, world!
    ^
Hint: Unterminated string literal
