crates/azalea-core/src/parse/snapshots/azalea_core__parse__tests__invalid_identifier.snap
---
source: crates/azalea-core/src/parse/tests.rs
expression: output
---
SOURCE:
$florbble

ERROR:
Error: Expected an expression
  1 > | $florbble
    ^
Hint: Identifiers cannot start with a special character
